src/core/Claroline/CoreBundle/Tests/Stub/plugin/Invalid/UnloadableBundleClass4/InvalidUnloadableBundleClass4.php
<?php

namespace Invalid\UnloadableBundleClass4;

class UnexpectedClassName
{
    /*
     * Unloadable because the class name doesn't
     * match the class file
     */
}